fix: resolution github dark mode color application of obstruction by tailwind

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,10 @@
   ol {
     list-style: revert;
   }
+
+  h2 {
+    color: var(--color-gray-900);
+  }
 }
 
 :root {
@@ -26,7 +30,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #19191d;
+    --background: #0d1117;
 
     --color-gray-100: #000000;
     --color-gray-150: #19191d;
